# sft-marimo

./: README.md  README.zh-CN.md  pyproject.toml
src/sft_marimo/: __init__.py  acp_path_filter.py  hooks.py  marimo.py
src/sft_marimo/marimo_mcp/: __init__.py  marimo_client.py  server.py
tests/: test_acp_path_filter.py  test_marimo.py  test_marimo_mcp.py
