[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sft-marimo"
version = "0.1.0"
description = "Marimo notebook plugin for sft — remote notebook + local ACP agent orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "pulcerto", email = "pulcerto@users.noreply.github.com" }]
dependencies = ["sft @ git+https://github.com/StarsInDmajor/sft.git", "mcp>=1.0"]
keywords = ["sft", "marimo", "notebook", "remote", "ssh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/StarsInDmajor/sft-marimo"
Repository = "https://github.com/StarsInDmajor/sft-marimo"
Issues = "https://github.com/StarsInDmajor/sft-marimo/issues"

[project.entry-points."sft.plugins"]
marimo = "sft_marimo.hooks"

[project.scripts]
marimo-mcp = "sft_marimo.marimo_mcp:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/sft_marimo"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
